Can not select keys in Dope Sheet #45915

Closed
opened 2015-08-26 17:42:14 +02:00 by Cenek Strichel · 6 comments

System Information
W10 64b

Blender Version
6ca12d1

Short description of error
I can not select keys in Dope Sheet Summary
select.png

video:
http://screencast.com/t/eL9BGcsYt

Exact steps for others to reproduce the error

  1. open summarySelect.blend
  2. Select keys in Dope Sheet Summary (border select all line)
  3. Only some keys are selected

It happens only Tweak strip mode, when action is scaled

**System Information** W10 64b **Blender Version** 6ca12d1 **Short description of error** I can not select keys in Dope Sheet Summary ![select.png](https://archive.blender.org/developer/F228169/select.png) video: http://screencast.com/t/eL9BGcsYt **Exact steps for others to reproduce the error** 1) open [summarySelect.blend](https://archive.blender.org/developer/F228171/summarySelect.blend) 2) Select keys in Dope Sheet Summary (border select all line) 3) Only some keys are selected It happens only Tweak strip mode, when action is scaled
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Joshua Leung was assigned by Campbell Barton 2015-08-27 04:23:07 +02:00
Member

I've had a look and I've figured out why this happens.

The main gist of it is that the current code is from before the summary track was introduced, and so could assume that ANIM_nla_mapping_get() would work for all channels present. Thus, simply converting the clicked frame to nla-mapped time once would be enough. However, for summary channels, nla-mapping_get() doesn't do anything, since we can potentially include keyframes from several different objects!

Fixing this is probably too dangerous for BCon4, especially since this isn't a regression. So, postponing a fix for this until after 2.76.

I've had a look and I've figured out why this happens. The main gist of it is that the current code is from before the summary track was introduced, and so could assume that ANIM_nla_mapping_get() would work for all channels present. Thus, simply converting the clicked frame to nla-mapped time once would be enough. However, for summary channels, nla-mapping_get() doesn't do anything, since we can potentially include keyframes from several different objects! Fixing this is probably too dangerous for BCon4, especially since this isn't a regression. So, postponing a fix for this until after 2.76.

This issue was referenced by c4dc14b079

This issue was referenced by c4dc14b079d81fd012383b910291246e7ebf9a04
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45915
No description provided.