source/blender/editors/animation/keyframes_edit.c
@@ -44,6 +44,7 @@
 #include "DNA_scene_types.h"
 
 #include "BKE_fcurve.h"
+#include "BKE_nla.h"
 
 #include "ED_anim_api.h"
 #include "ED_keyframes_edit.h"
@@ -290,9 +291,39 @@ static short summary_keyframes_loop(KeyframeEditData *ked, bAnimContext *ac, Key
 			case ALE_MASKLAY:
 			case ALE_GPFRAME:
 				break;
+				
+			case ALE_FCURVE:
 			default:
-				ret_code = ANIM_fcurve_keyframes_loop(ked, ale->data, key_ok, key_cb, fcu_cb);
+			{
+				if (ked->iterflags) {
+					/* make backups of the current values, so that a localised fix
+					 * (e.g. NLA time remapping) can be applied to these values
+					 */
+					float f1 = ked->f1;
+					float f2 = ked->f2;
+					
+					if (ked->iterflags & (KED_F1_NLA_UNMAP | KED_F2_NLA_UNMAP)) {
+						AnimData *adt = ANIM_nla_mapping_get(ac, ale);
+						
+						if (ked->iterflags & KED_F1_NLA_UNMAP)
+							ked->f1 = BKE_nla_tweakedit_remap(adt, f1, NLATIME_CONVERT_UNMAP);
+						if (ked->iterflags & KED_F2_NLA_UNMAP)
+							ked->f2 = BKE_nla_tweakedit_remap(adt, f2, NLATIME_CONVERT_UNMAP);
+					}
+					
+					/* now operate on the channel as per normal */
+					ret_code = ANIM_fcurve_keyframes_loop(ked, ale->data, key_ok, key_cb, fcu_cb);
+					
+					/* reset */
+					ked->f1 = f1;
+					ked->f2 = f2;
+				}
+				else {
+					/* no special handling required... */
+					ret_code = ANIM_fcurve_keyframes_loop(ked, ale->data, key_ok, key_cb, fcu_cb);
+				}
 				break;
+			}
 		}
 		
 		if (ret_code)
