source/blender/editors/include/ED_keyframes_edit.h
@@ -132,8 +132,19 @@ typedef struct KeyframeEditData {
 
 	/* flags */
 	short curflags;             /* current flags for the keyframe we're reached in the iteration process */
-	short iterflags; /* settings for iteration process */            // XXX: unused...
+	short iterflags;            /* settings for iteration process */
 } KeyframeEditData;
+
+/* Flags for controlling the iteration process (to supply additional capabilities, etc.) */
+typedef enum eKeyframeEditData_IterFlags {
+	/* Perform NLA time remapping (global -> strip) for the "f1" parameter
+	 * (e.g. used for selection tools on summary tracks)
+	 */
+	KED_F1_NLA_UNMAP = (1 << 0),
+	
+	/* Perform NLA time remapping (global -> strip) for the "f2" parameter */
+	KED_F2_NLA_UNMAP = (1 << 1),
+} eKeyframeEditData_IterFlags;
 
 /* ------- Function Pointer Typedefs ---------------- */
 
